--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -1,7 +1,8 @@
-@import url(reset.css);
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap-grid.min.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css");
+@import url("https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css");
+@import url(reset.css);
 
 body{
   font-family: 'Pretendard';
@@ -44,6 +45,8 @@ body{
   background: var(--primary-n);
 }
 .gnb-body .admin-profile{
+  position: sticky;
+  top: 0;
   height: 378px;
   margin: 0 auto;
   text-align: center;
@@ -88,16 +91,26 @@ body{
   transform: translate(-50%,-50%);
 }
 .gnb-body .gnb-menu{
-  /* margin-left: 70px; */
+  margin-left: 63px;
+}
+.gnb-body .gnb-menu span,
+.gnb-body .gnb-menu li a {
+  color: var(--background-w);
 }
 .gnb-body .gnb-menu li{
   height: 72px;
-  color: var(--background-w);
 }
 .gnb-body .gnb-menu li i{
+  width: 38px;
   color: var(--primary-r);
   font-size: 27px;
-  margin-right: 40px;
+  text-align: center;
+  margin-right: 35px;
+}
+.gnb-body .gnb-menu .menu-wrap{
+  display: block;
+  position: relative;
+  white-space: nowrap;
 }
 
 
@@ -152,12 +165,12 @@ body{
   font-size: 18px;
   font-weight: 500;
 }
-.main-menu{
+.main-menu-ft{
   font-size: 24px;
   font-weight: 700;
   line-height: 27px;
 }
-.sub-menu{
+.sub-menu-ft{
   font-size: 20px;
   font-weight: 700;
 }
