--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css");
-@import url("https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css");
+/* @import url("https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"); */
 @import url(reset.css);
 
 body{
@@ -97,9 +97,6 @@ body{
 .gnb-body .gnb-menu li a {
   color: var(--background-w);
 }
-.gnb-body .gnb-menu li{
-  height: 72px;
-}
 .gnb-body .gnb-menu li i{
   width: 38px;
   color: var(--primary-r);
@@ -110,7 +107,40 @@ body{
 .gnb-body .gnb-menu .menu-wrap{
   display: block;
   position: relative;
+  width: 303px;
+  height: 77px;
+  line-height: 77px;
   white-space: nowrap;
+}
+.gnb-body .gnb-menu a[aria-expanded="true"] .menu-wrap::after{
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background: var(--background-g);
+}
+.gnb-body .gnb-menu li .collapsing,
+.gnb-body .gnb-menu li .collapse ul{
+  margin-left: 73px;
+}
+.gnb-body .gnb-menu li .collapse ul{
+  display: none;
+}
+.gnb-body .gnb-menu li .collapse.show ul{
+  display: block;
+}
+.gnb-body .gnb-menu li .collapsing ul li:not(:last-child),
+.gnb-body .gnb-menu li .collapse ul li:not(:last-child){
+  margin-bottom: 15px;
+}
+.gnb-body .gnb-menu a[aria-expanded="true"]{
+  background: var(--background-g);
+}
+
+.gnb-body .gnb-menu a[aria-expanded="true"] i,
+.gnb-body .gnb-menu a[aria-expanded="true"] span{
+  color: var(--primary-n);
 }
 
 
