--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -74,7 +74,7 @@ section h3{
   margin-bottom: 27px;
 }
 #course-data,#click-data,
-#newcourse{
+#newcourse,#calendar-data{
   position: absolute;
   top: 0;
 }
@@ -129,26 +129,85 @@ section h3{
 #newcourse .newcourse-item:last-child{
   margin-bottom: 0;
 }
-
 #calendar-data{
   right: 0;
+  width: 493px;
 }
 #calendar-data #calendar{
+  position: relative;
+  border-radius: 20px;
   background: var(--highlight-s);
+  padding: 30px 25px;
+  
+}
+#calendar-data .fc-toolbar-chunk:last-of-type{
+}
+.fc-direction-ltr .fc-toolbar>*>:not(:first-child){
+  margin-left: 0;
+}
+#calendar-data .fc-button-group{
+  position: static;
+}
+#calendar-data .fc-button-group .fc-prev-button {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+}
+#calendar-data .fc-button-group .fc-next-button {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+}
+.fc-icon-chevron-left:before {
+  color:var(--background-w);
+  content: url("../img/caret-left-solid.svg");
+  /* font-family: "Font Awesome 6 Free"; */
+}
+.fc-icon-chevron-right:before {
+  color:var(--background-w);
+  content: url("../img/caret-right-solid.svg");
+  /* font-family: "Font Awesome 6 Free"; */
 }
 #calendar-data .fc-theme-standard td,#calendar-data .fc-theme-standard th,#calendar-data .fc-theme-standard .fc-scrollgrid{
   border:none;
 }
 #calendar-data .fc-daygrid-day.fc-day-today{
+  background: none;
+}
+#calendar-data .fc-daygrid-day.fc-day-today .fc-daygrid-day-number{
+  line-height: 24px;
+}
+#calendar-data .fc-daygrid-day.fc-day-today .fc-daygrid-day-number{
+  display: inline-block;
   background: var(--primary-n);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  font-weight: 700;
+}
+
+#calendar-data #calendar .fc-today-button{
+  display: none;
 }
 #calendar-data #calendar h2{
+  display: block;
+  text-align: center;
   color:var(--background-w);
 }
 #calendar-data #calendar .fc-col-header-cell-cushion{
   color:var(--typography);
   font-size: 14px;
   font-weight: 500;
+}
+#calendar-data #calendar .fc-daygrid-day-top {
+  display: block;
+  text-align: center;
 }
 #calendar-data #calendar .fc-daygrid-day-number{
   color:var(--background-w);
