--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -36,7 +36,7 @@ section {
   color: var(--primary-n);
   margin-bottom: 27px;
 }
-section h3{
+section h3 {
   margin-bottom: 12px;
 }
 #bookmark-menu {
@@ -68,54 +68,57 @@ section h3{
   color: var(--typography);
 }
 
-.dashboard-data{
+.dashboard-data {
   position: relative;
   height: 351px;
   margin-bottom: 27px;
 }
-#course-data,#click-data,
-#newcourse,#calendar-data{
+#course-data,
+#click-data,
+#newcourse,
+#calendar-data {
   position: absolute;
   top: 0;
 }
-#course-data{
+#course-data {
   left: 0;
   margin-right: 40px;
 }
 
-#click-data{
+#click-data {
   right: 0;
 }
 
-#course-data span,#click-data span,
-#newcourse span{
+#course-data span,
+#click-data span,
+#newcourse span {
   position: absolute;
   top: 0;
   right: 0;
   font-size: 20px;
   line-height: 27px;
   font-weight: 700;
-  color: #7A7A7A;
+  color: #7a7a7a;
 }
-#course-data div{
+#course-data div {
   width: 606px;
   height: 312px;
   border-radius: 20px;
   background: var(--background-w);
 }
-#click-data div{
+#click-data div {
   width: 706px;
   height: 312px;
   border-radius: 20px;
   background: var(--background-w);
 }
-#newcourse{
+#newcourse {
   left: 0;
 }
-#newcourse ul{
+#newcourse ul {
   width: 820px;
 }
-#newcourse .newcourse-item{
+#newcourse .newcourse-item {
   display: block;
   width: 100%;
   height: 63px;
@@ -124,28 +127,25 @@ section h3{
   background: var(--background-w);
   padding-left: 30px;
   margin-bottom: 20px;
-  color:#525252;
+  color: #525252;
 }
-#newcourse .newcourse-item:last-child{
+#newcourse .newcourse-item:last-child {
   margin-bottom: 0;
 }
-#calendar-data{
+#calendar-data {
   right: 0;
   width: 493px;
 }
-#calendar-data #calendar{
+#calendar-data #calendar {
   position: relative;
   border-radius: 20px;
   background: var(--highlight-s);
   padding: 30px 25px;
-  
 }
-#calendar-data .fc-toolbar-chunk:last-of-type{
-}
-.fc-direction-ltr .fc-toolbar>*>:not(:first-child){
+.fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
   margin-left: 0;
 }
-#calendar-data .fc-button-group{
+#calendar-data .fc-button-group {
   position: static;
 }
 #calendar-data .fc-button-group .fc-prev-button {
@@ -164,26 +164,26 @@ section h3{
   background: none;
   border: none;
 }
-.fc-icon-chevron-left:before {
-  color:var(--background-w);
+#calendar-data .fc-icon-chevron-left:before {
+  color: var(--background-w);
   content: url("../img/caret-left-solid.svg");
-  /* font-family: "Font Awesome 6 Free"; */
 }
-.fc-icon-chevron-right:before {
-  color:var(--background-w);
+#calendar-data .fc-icon-chevron-right:before {
+  color: var(--background-w);
   content: url("../img/caret-right-solid.svg");
-  /* font-family: "Font Awesome 6 Free"; */
 }
-#calendar-data .fc-theme-standard td,#calendar-data .fc-theme-standard th,#calendar-data .fc-theme-standard .fc-scrollgrid{
-  border:none;
+#calendar-data .fc-theme-standard td,
+#calendar-data .fc-theme-standard th,
+#calendar-data .fc-theme-standard .fc-scrollgrid {
+  border: none;
 }
-#calendar-data .fc-daygrid-day.fc-day-today{
+#calendar-data .fc-daygrid-day.fc-day-today {
   background: none;
 }
-#calendar-data .fc-daygrid-day.fc-day-today .fc-daygrid-day-number{
+#calendar-data .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
   line-height: 24px;
 }
-#calendar-data .fc-daygrid-day.fc-day-today .fc-daygrid-day-number{
+#calendar-data .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
   display: inline-block;
   background: var(--primary-n);
   border-radius: 50%;
@@ -192,16 +192,16 @@ section h3{
   font-weight: 700;
 }
 
-#calendar-data #calendar .fc-today-button{
+#calendar-data #calendar .fc-today-button {
   display: none;
 }
-#calendar-data #calendar h2{
+#calendar-data #calendar h2 {
   display: block;
   text-align: center;
-  color:var(--background-w);
+  color: var(--background-w);
 }
-#calendar-data #calendar .fc-col-header-cell-cushion{
-  color:var(--typography);
+#calendar-data #calendar .fc-col-header-cell-cushion {
+  color: var(--typography);
   font-size: 14px;
   font-weight: 500;
 }
@@ -209,6 +209,6 @@ section h3{
   display: block;
   text-align: center;
 }
-#calendar-data #calendar .fc-daygrid-day-number{
-  color:var(--background-w);
+#calendar-data #calendar .fc-daygrid-day-number {
+  color: var(--background-w);
 }
