--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -3,9 +3,13 @@
 body {
   background: var(--background-g);
 }
+a {
+  color: var(--primary-n);
+}
 section {
   color: var(--primary-n);
   margin-bottom: 27px;
+  position: relative;
 }
 section h3 {
   margin-bottom: 12px;
@@ -32,6 +36,23 @@ section h3 {
 #bookmark-menu .bookmark-list .bookmark-item i {
   font-size: 48px;
   margin-bottom: 15px;
+  position: relative;
+}
+#bookmark-menu .bookmark-list .bookmark-item i.category-add:after,
+#bookmark-menu .bookmark-list .bookmark-item i.lecture-add:after{
+  position: absolute;
+  bottom: -7px;
+  right: 60px;
+  content: '+';
+  display: block;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  font-size: 20px;
+  text-align: center;
+  line-height: 22px;
+  color:var(--background-w);
+  background: var(--highlight-s);
 }
 #bookmark-menu .bookmark-list .bookmark-item span {
   font-size: 18px;
