--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -3,6 +3,9 @@
 body {
   background: var(--background-g);
 }
+.bookmark{
+  display: none;
+}
 a {
   color: var(--primary-n);
 }
@@ -37,6 +40,25 @@ section h3 {
   font-size: 48px;
   margin-bottom: 15px;
   position: relative;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+#bookmark-menu .bookmark-list .bookmark-item i.fa-school:hover{
+  color:var(--highlight-s);
+}
+#bookmark-menu .bookmark-list .bookmark-item i.fa-list-check:hover{
+  color:#3C90C7;
+}
+#bookmark-menu .bookmark-list .bookmark-item i.fa-bullhorn:hover{
+  color: var(--primary-r);
+}
+#bookmark-menu .bookmark-list .bookmark-item i.fa-ticket:hover{
+  color: var(--highlight-m);
+}
+#bookmark-menu .bookmark-list .bookmark-item i.category-add:hover{
+  color: #9747FF;
+}
+#bookmark-menu .bookmark-list .bookmark-item i.lecture-add:hover{
+  color: #000;
 }
 #bookmark-menu .bookmark-list .bookmark-item i.category-add:after,
 #bookmark-menu .bookmark-list .bookmark-item i.lecture-add:after{
