--- a/admin/css/board_write.css
+++ b/admin/css/board_write.css
@@ -21,7 +21,7 @@ textarea,
   display: block;
   font-size: 18px;
   padding: 16px 24px;
-  border-radius: 0;
+  border-radius: 5px;
 }
 
 .form-select {
@@ -45,7 +45,7 @@ textarea {
   color: #1d3557;
   display: block;
   font-size: 18px;
-  border-radius: 0;
+  border-radius: 5px;
 }
 
 .files_btn {
