--- a/admin/css/lecture_list.css
+++ b/admin/css/lecture_list.css
@@ -1,17 +1,23 @@
 main h2 + a {
   margin: 54px 0 27px;
 }
-input,
-select {
+.content-body {
+  height: auto;
+}
+.form-control,
+.form-select,
+#search_keyword {
   padding: 15px 25px;
   border: 1px solid var(--primary-n);
   border-radius: 5px;
+  height: 54px;
+  margin-bottom: 30px;
 }
-input:focus,
+/* input:focus,
 select:focus {
   border: 4px solid #3e88f1;
   padding: 12px 11px;
-}
+} */
 #search_keyword::placeholder {
     color: var(--primary-n);
   font-size: 18px;
@@ -25,4 +31,92 @@ main #lec_list .lec_info_title {
 }
 main #lec_list h3 {
   display: inline;
+}
+#sort_container .lec_option {
+  height: 50px;
+}
+.lec_option input {
+  width: 25px;
+  height: 25px;
+}
+.lec_option {
+  white-space: nowrap;
+}
+#lec_list figure {
+  padding: 0;
+  width: 198px;
+  height: 135px;
+  border-radius: 10px;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+}
+#lec_list figure image {
+  width: 100%;
+  height: 100%;
+}
+#lec_list .lec_info_box,
+#lec_list .lec_option_box {
+  padding: 13px 0 13px 25px;
+}
+#lec_list .lec_info_title h3 {
+  margin-right: 30px;
+  line-height: 32px;
+}
+#lec_list .lec_info_title a {
+  margin-right: 10px;
+}
+#lec_list {
+  margin-top: 80px;
+}
+#lec_list li {
+  background: #FFFFFF;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 53px 40px;
+}
+#lec_list .lec_option_box {
+  justify-content: flex-end;
+}
+#lec_list .lec_option_box select {
+  width: 165px;
+  font-size: 18px;
+  padding: 8px 16px 10px;
+}
+#lec_list .lec_option_box p {
+  gap: 38px;
+  justify-content: flex-end;
+}
+#lec_list .lec_info_box p {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  margin-top: 6px;
+  display: block;
+}
+#lec_list_container > p {
+  margin-top: 60px;
+  text-align: right;
+}
+.lec_pagination {
+  margin-top: 80px;
+}
+.lec_pagination a {
+  color: var(--primary-n);
+  display: inline-block;
+  border-radius: 50%;
+  background: none;
+  font-size: 18px;
+  font-weight: 700;
+  width: 27px;
+  height: 27px;
+  text-align: center;
+  line-height: 27px;
+}
+.lec_pagination a.active {
+  color: var(--background-g);
+  background: var(--primary-n);
+}
+#lec_list .lec_info_box i {
+  margin: 0 10px;
 }
