--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -172,10 +172,11 @@ body {
   position: relative;
   margin-left: 328px;
   background: var(--background-g);
-  height: 100vh;
+  height: auto;
 }
 .content-body .content-top {
-  text-align: right;
+  position: absolute;
+  right: 114px;
 }
 .content-body .content-top .bookmark {
   margin-top: 25px;
@@ -184,7 +185,6 @@ body {
 /* Logo */
 #main-logo {
   display: inline-block;
-  height: 33px;
 }
 #main-logo a img {
   display: block;
@@ -333,6 +333,10 @@ body {
 }
 
 /* Bookmark */
+.bookmark{
+  position: absolute;
+  right: 0;
+}
 .bookmark label {
   display: inline-block;
   width: 81px;
