--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -3,9 +3,6 @@
 body {
   background: var(--background-g);
 }
-.bookmark{
-  display: none;
-}
 a {
   color: var(--primary-n);
 }
@@ -18,10 +15,11 @@ section h3 {
   margin-bottom: 12px;
 }
 #bookmark-menu {
-  margin-top: 30px;
+  margin-top: 80px;
 }
 #bookmark-menu h2 {
   margin-bottom: 17px;
+  font-weight: 700;
 }
 #bookmark-menu h2 i {
   margin-right: 11px;
@@ -146,6 +144,7 @@ section h3 {
 .cld-main {
   position: relative;
   box-sizing: border-box;
+  height: 292px;
 }
 .cld-main a {
   color: #333;
