--- a/admin/css/category_list.css
+++ b/admin/css/category_list.css
@@ -1,3 +1,6 @@
+.content-body {
+  height: auto;
+}
 .cate_list_btn_wrapper {
   gap: 30px;
 }
@@ -5,13 +8,14 @@ main table {
   width: 100%;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
 }
-main table thead tr {
+main table thead {
   background: var(--highlight-s);
   color: #fff;
+  border-bottom: 1px solid var(--highlight-s);
 }
 main table thead tr th {
   width: 33%;
-  padding: 28px 0;
+  padding: 20px 0;
 }
 main table thead tr th:first-child {
   border-top-left-radius: 20px;
@@ -19,11 +23,17 @@ main table thead tr th:first-child {
 main table thead tr th:last-child {
   border-top-right-radius: 20px;
 }
+main table tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 20px;
+}
+main table tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 20px;
+}
 main table tbody tr td {
   text-align: center;
   background: var(--background-w);
-  line-height: 54px;
-  height: 54px;
+  line-height: 35px;
+  height: 35px;
   font-size: 24px;
 }
 main table tbody tr td:first-child {
