--- a/admin/css/category_list.css
+++ b/admin/css/category_list.css
@@ -32,13 +32,15 @@ main table tbody tr:last-child td:last-child {
 main table tbody tr td {
   text-align: center;
   background: var(--background-w);
-  line-height: 35px;
-  height: 35px;
+  line-height: 27px;
+  padding: 18px 50px;
+  height: 27px;
   font-size: 24px;
+  border-bottom: 1px solid var(--highlight-s);
 }
-main table tbody tr td:first-child {
+main table tbody tr:first-child  td{
   padding-top: 27px;
 }
-main table tbody tr td:last-child {
+main table tbody tr:last-child td {
   padding-bottom: 27px;
 }
