--- a/admin/css/board_index.css
+++ b/admin/css/board_index.css
@@ -4,6 +4,19 @@
 
 .page-title {
   color: #161616;
+  margin-top: 81px;
+}
+
+.borad_top{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 81px 0;
+}
+
+.board_forms{
+  display: flex;
+
 }
 
 .form-select {
@@ -24,15 +37,9 @@
   margin-left: 30px;
 }
 
-.borad_top {
-  display: flex;
-  justify-content: space-between;
-}
-
 table {
   width: 100%;
-  height: 757px;
-  margin-top: 27px;
+  height: 460px;
   background: #ffffff;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px 10px 0px 0px;
@@ -40,41 +47,58 @@ table {
 }
 
 table thead {
-  height: 81px;
+  height: 55px;
   border-radius: 10px 10px 0px 0px;
   background: #457b9d;
   font-size: 24px;
-  line-height: 81px;
+  line-height: 55px;
   text-align: center;
   color: #ffffff;
 }
 
-thead tr th {
-  padding-left: 45px;
+/* 테이블 텍스트 중간 정렬 */
+
+thead tr th:first-child,
+tbody tr td:first-child {
+  text-align: center;
+  padding-left: 40px;
+}
+
+thead tr th:nth-child(2),
+tbody tr td:nth-child(2) {
+  text-align: center;
+  width: 600px;
+}
+
+thead tr th:nth-child(3),
+tbody tr td:nth-child(3) {
+  text-align: center;
+  padding-left: 10px;
+}
+
+thead tr th:nth-child(4),
+tbody tr td:nth-child(4) {
+  text-align: center;
+  padding-left: 10px;
 }
 
 tbody tr {
   font-size: 24px;
-  line-height: 135px;
+  line-height: 81px;
   color: #1d3557;
-  padding-left: 50px;
 }
 
 tbody tr th {
-  line-height: 0;
-  width: 64px;
-  display: inline-block;
-  position: relative;
-  top: 20px;
-  margin-right: 20px;
+  text-align: center;
+  line-height: 55px;
+  padding-right: 10px;
 }
+/* 테이블 중간 정렬 끝 */
+
 tbody tr:not(:last-child) {
-  border-bottom: 2px solid #1d3557;
+  border-bottom: 1px solid #1d3557;
 }
 
-tbody tr td {
-  padding-left: 80px;
-}
 .edit {
   font-size: 16px;
   line-height: 27px;
@@ -91,31 +115,24 @@ tbody tr td {
   padding: 4px 17px;
   background: #e53945;
   border-radius: 5px;
-  margin-top: 10px;
 }
 
-.pagenation ul {
-  list-style: none;
+.board_pagination {
+  margin-top: 80px;
 }
-.pagenation ul li {
+.board_pagination a {
+  color: var(--primary-n);
   display: inline-block;
-}
-.pagenation ul li:not(:first-child) {
-  margin-left: 40px;
-}
-.pagenation {
-  color: #1d3557;
-  font-size: 18px;
-  line-height: 18px;
-  text-align: center;
-  margin-top: 81px;
-  display: flex;
-  justify-content: center;
-}
-.pagenation ul li:active {
-  color: #ffffff;
-  background-color: #1d3557;
-  width: 18px;
-  height: 18px;
   border-radius: 50%;
+  background: none;
+  font-size: 18px;
+  font-weight: 700;
+  width: 27px;
+  height: 27px;
+  text-align: center;
+  line-height: 27px;
+}
+.board_pagination a.active {
+  color: var(--background-g);
+  background: var(--primary-n);
 }
