--- a/admin/css/board_read.css
+++ b/admin/css/board_read.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+.page-title {
+    margin-top: 81px;
+  }
+  
 .read_top{
     width: 100%;
     height: 81px;
@@ -32,15 +36,16 @@
 }
 .read_content{
     width: 100%;
-    height: 650px;
+    height: 100%;
     background: #FFFFFF;
-    padding: 110px 0 0 50px;
+    padding: 110px;
+    padding-left: 50px;
     position: relative;
 }
 .read_content p{
     font-weight: 500;
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 20px;
+    line-height: 24px;
     color: #1D3557;
 }
 .read_btns{
@@ -67,7 +72,7 @@
 }
 .file_bottom{
     width: 100%;
-    height: 81px;
+    height: 70px;
     display: inline-block;
     background-color: #ffffff;
     border-top: 2px solid #1D3557;
@@ -76,7 +81,7 @@
 .file_bottom .file{
     font-weight: 500;
     font-size: 24px;
-    line-height: 81px;
+    line-height: 70px;
     color: #1D3557;
     padding-left: 50px;
 }
