--- a/admin/css/board_modify.css
+++ b/admin/css/board_modify.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+.page-title {
+  margin-top: 81px;
+}
 
 label,
 h3 {
@@ -21,7 +24,7 @@ textarea,
   display: block;
   font-size: 18px;
   padding: 16px 24px;
-  border-radius: 0;
+  border-radius: 5px;
 }
 
 .form-select {
@@ -33,7 +36,7 @@ textarea {
 }
 
 .btns {
-  margin-top: 108px;
+  margin-top: 27px;
   display: flex;
   justify-content: flex-end;
   gap: 30px;
@@ -45,7 +48,7 @@ textarea {
   color: #1d3557;
   display: block;
   font-size: 18px;
-  border-radius: 0;
+  border-radius: 5px;
 }
 
 .files_btn {
