--- a/admin/css/lecture_up.css
+++ b/admin/css/lecture_up.css
@@ -64,13 +64,16 @@ main h3, h4 {
   height: 54px;
   margin-bottom: 30px;
 }
-/* input:focus,
-select:focus {
-  border: 4px solid #3e88f1;
-  padding: 12px 11px;
-} */
+textarea:focus,
+.form-select:focus,
+input:focus,
+.form-control:focus  {   
+    outline: none;
+    border: 4px solid #3E88F1;
+    padding: 12px 23x;
+}
 .g35 {
-    gap: 35px;
+    gap: 30px;
 }
 main h4 + input {
     display: none;
