--- a/admin/css/lecture_list.css
+++ b/admin/css/lecture_list.css
@@ -120,3 +120,9 @@ main #lec_list h3 {
 #lec_list .lec_info_box i {
   margin: 0 10px;
 }
+
+#lec_list .thumbnail_img_preview{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
