--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -40,30 +40,30 @@ section h3 {
   position: relative;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
-#bookmark-menu .bookmark-list .bookmark-item i.fa-school:hover{
-  color:var(--highlight-s);
+#bookmark-menu .bookmark-list .bookmark-item i.fa-school:hover {
+  color: var(--highlight-s);
 }
-#bookmark-menu .bookmark-list .bookmark-item i.fa-list-check:hover{
-  color:#3C90C7;
+#bookmark-menu .bookmark-list .bookmark-item i.fa-list-check:hover {
+  color: #3c90c7;
 }
-#bookmark-menu .bookmark-list .bookmark-item i.fa-bullhorn:hover{
+#bookmark-menu .bookmark-list .bookmark-item i.fa-bullhorn:hover {
   color: var(--primary-r);
 }
-#bookmark-menu .bookmark-list .bookmark-item i.fa-ticket:hover{
+#bookmark-menu .bookmark-list .bookmark-item i.fa-ticket:hover {
   color: var(--highlight-m);
 }
-#bookmark-menu .bookmark-list .bookmark-item i.category-add:hover{
-  color: #9747FF;
+#bookmark-menu .bookmark-list .bookmark-item i.category-add:hover {
+  color: #9747ff;
 }
-#bookmark-menu .bookmark-list .bookmark-item i.lecture-add:hover{
+#bookmark-menu .bookmark-list .bookmark-item i.lecture-add:hover {
   color: #000;
 }
 #bookmark-menu .bookmark-list .bookmark-item i.category-add:after,
-#bookmark-menu .bookmark-list .bookmark-item i.lecture-add:after{
+#bookmark-menu .bookmark-list .bookmark-item i.lecture-add:after {
   position: absolute;
   bottom: -7px;
   right: 60px;
-  content: '+';
+  content: "+";
   display: block;
   width: 22px;
   height: 22px;
@@ -71,7 +71,7 @@ section h3 {
   font-size: 20px;
   text-align: center;
   line-height: 22px;
-  color:var(--background-w);
+  color: var(--background-w);
   background: var(--highlight-s);
 }
 #bookmark-menu .bookmark-list .bookmark-item span {
@@ -100,18 +100,7 @@ section h3 {
   font-weight: 700;
   color: #7a7a7a;
 }
-#course-data div {
-  width: 606px;
-  height: 312px;
-  border-radius: 20px;
-  background: var(--background-w);
-}
-#click-data div {
-  width: 706px;
-  height: 312px;
-  border-radius: 20px;
-  background: var(--background-w);
-}
+
 #newcourse {
   margin-right: 34px;
 }
@@ -291,4 +280,67 @@ section h3 {
 
 .cld-day:nth-of-type(n + 43) {
   display: none;
+}
+
+/* CHART */
+#course-data .doughnut-wrap {
+  width: 606px;
+  height: 312px;
+  border-radius: 20px;
+  background: var(--background-w);
+  position: relative;
+}
+#click-data > div {
+  width: 706px;
+  height: 312px;
+  border-radius: 20px;
+  background: var(--background-w);
+}
+
+#myChart,
+#legend-div {
+  font-family: "Pretendard", sans-serif;
+  font-weight: 400;
+}
+.chart-div {
+  position: relative;
+  height: 100%;
+}
+#myChart {
+  padding: 20px 50px 50px 70px;
+  /* height: 312px;  */
+}
+#DoughnutChart {
+  width: 250px;
+  position: relative;
+  top: 10%;
+  left: 13%;
+}
+.chart-div .legend-div {
+  position: absolute;
+  top: 62px;
+  left: 320px;
+}
+#course-data .legend-div ul {
+  transform: translateX(60%);
+}
+.chart-div .legend-div ul li {
+  list-style: none;
+  margin: 10px 0;
+  color: #161616;
+  font-size: 20px;
+  line-height: 27px;
+  display: flex;
+  align-items: center;
+}
+
+.chart-div .legend-div ul li span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 10px;
+  vertical-align: middle;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  line-height: 27px;
 }
