--- a/admin/css/lecture_up.css
+++ b/admin/css/lecture_up.css
@@ -64,13 +64,20 @@ main h3, h4 {
   height: 54px;
   margin-bottom: 30px;
 }
-textarea:focus,
+textarea:focus {
+    outline: none;
+    border: 6px solid rgba(62,136,241,.4);
+    box-sizing: border-box;
+    padding: 12px 11px;
+}
+select:focus,
 .form-select:focus,
 input:focus,
-.form-control:focus  {   
+.form-control:focus {
     outline: none;
-    border: 4px solid #3E88F1;
-    padding: 12px 23x;
+    border: 6px solid rgba(62,136,241,.5);
+    padding: 10px 23px;
+    box-sizing: border-box;
 }
 .g35 {
     gap: 30px;
