lecture_list.css 업로드 (완성)

--- a/admin/css/lecture_list.css
+++ b/admin/css/lecture_list.css
@@ -13,11 +13,15 @@ main h2 + a {
   height: 54px;
   margin-bottom: 30px;
 }
-/* input:focus,
-select:focus {
-  border: 4px solid #3e88f1;
-  padding: 12px 11px;
-} */
+select:focus,
+.form-select:focus,
+#search_keyword:focus,
+.form-control:focus {
+    outline: none;
+    border: 6px solid rgba(62,136,241,.5);
+    padding: 10px 23px;
+    box-sizing: border-box;
+}
 #search_keyword::placeholder {
     color: var(--primary-n);
   font-size: 18px;
@@ -74,6 +78,7 @@ main #lec_list h3 {
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   padding: 53px 40px;
+  margin-bottom: 27px;
 }
 #lec_list .lec_option_box {
   justify-content: flex-end;
