--- a/admin/css/category.css
+++ b/admin/css/category.css
@@ -10,10 +10,14 @@ select {
   font-size: 18px;
   font-weight: 500;
 }
+select:focus,
+.form-select:focus,
 input:focus,
-select:focus {
-  border: 4px solid #3e88f1;
-  padding: 12px 11px;
+.form-control:focus {
+    outline: none;
+    border: 6px solid rgba(62,136,241,.5);
+    padding: 10px 10px;
+    box-sizing: border-box;
 }
 .category_wrapper select {
   /* width: 420px; */
